removed 'http' to enable 'https' support & added less-middleware for dependency

--- a/public/styled/style.less
+++ b/public/styled/style.less
@@ -190,7 +190,7 @@ div,h1,h2,h3,h4{
 	position: absolute;
 	top:0;
 	left:0;
-	background: url("http://static.squarespace.com/static/5134b5dee4b0c6fb04df399f/t/52991611e4b01a756858776d/1385764369922/hackidemia-banner-pattern.jpg");
+	background: url("//static.squarespace.com/static/5134b5dee4b0c6fb04df399f/t/52991611e4b01a756858776d/1385764369922/hackidemia-banner-pattern.jpg");
 }
 
 .archyHeader{
