--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,10 +3,10 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/styled/style.css' />
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400' rel='stylesheet' type='text/css'>
-  	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
-  	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <link href='//fonts.googleapis.com/css?family=Raleway:400' rel='stylesheet' type='text/css'>
+  	<link href='//fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
+  	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="/js/index.js"></script>
   </head>
   <body>
