added loading stage for front-end

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,9 +18,18 @@
 	<div class="robotHead">
 	<img src="imaginary/hackidemia.png">
 	</div>
-	<div class="quoteAtHead">
+	<div>
+	<div class="spinner">
+	  <div class="rect1"></div>
+	  <div class="rect2"></div>
+	  <div class="rect3"></div>
+	  <div class="rect4"></div>
+	  <div class="rect5"></div>
+	</div>
+	<div class="quoteAtHead tobeSprangOut">
 	“Tell me and I forget. Teach me and I remember.<br> 
 	Involve me and I learn.”  - Benjamine Franklin
+	</div>
 	</div>
 	</div>
 	</div>
