--- a/public/styled/style.less
+++ b/public/styled/style.less
@@ -106,12 +106,72 @@ He's been doing it since the age of 13.
 	-moz-animation: springOut 0.4s ease forwards;
 	animation: springOut 0.4s ease forwards;
 }
+
+/*customized spinner originally crafted by Tobias Ahlin http://tobiasahlin.com/spinkit/ */
+.spinner {
+  margin: 0px auto;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  font-size: 10px;
+  position: absolute;
+  top:50px;
+  margin-left: -15px;
+  left:50%;
+  -webkit-transition: 400ms opacity ease-out;
+  -moz-transition: 400ms opacity ease-out;
+  -o-transition: 400ms opacity ease-out;
+  transition: 400ms opacity ease-out;
+}
+
+.spinner > div {
+  background-color: #fff;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
+  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+  animation: stretchdelay 1.2s infinite ease-in-out;
+}
+.spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+.spinner .rect3 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+.spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+.spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+@-webkit-keyframes stretchdelay {
+  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+  20% { -webkit-transform: scaleY(1.0) }
+}
+@keyframes stretchdelay {
+  0%, 40%, 100% { 
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }  20% { 
+    transform: scaleY(1.0);
+    -webkit-transform: scaleY(1.0);
+  }
+}
+
 /* Archy boostrapping himself! Such boostrapping. Much indepedent. Very CSS-framework-phobic. Oh. */
 *{
 	padding: 0;
 	margin:0;
 }
+div,h1,h2,h3,h4{
+	position: relative;
+}
 body {
+  overflow: hidden;
   font: 14px Times;
 }
 a{
@@ -169,9 +229,15 @@ h1{
 	font-family: "Montserrat";
 	padding:120px 0;
 }
-
-div,h1,h2,h3,h4{
-	position: relative;
+.hidden{
+  opacity: 0;
+  -webkit-transition: 500ms opacity ease-out;
+  -moz-transition: 500ms opacity ease-out;
+  -o-transition: 500ms opacity ease-out;
+  transition: 500ms opacity ease-out;
+}
+.shown{
+	opacity: 1;
 }
 .inline-block{
 	display: inline-block;
@@ -216,6 +282,8 @@ div,h1,h2,h3,h4{
 		display: table;
 		margin:0 auto;
 		.robotHead{
+			width: 434px;
+			height: 393px;
 			text-align: center;
 			margin-top: 30px;
 		}
