added load effect for robot head

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
 
 	<div class="archyHeadMid">
 	<div class="robotHead">
-	<img src="imaginary/hackidemia.png">
+	<img class="robotImage tobeScaledUp" src="imaginary/hackidemia.png">
 	</div>
 	<div>
 	<div class="spinner">
