updated footer & disabled scroll when loading for chrome

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -163,10 +163,10 @@ the curent education in SIngapore!<div class="triggerSprangOut single"> </div>
 	<div class="archySessionTitle">
 	<div class="archyFooter">
 	<div class="inline-block margin-right-80">
-	Email<br>
-	sg@hackidemia.com
+	<p>Contact us at<br>sg@hackidemia.com</p>
+
 	</div>
-	<div class="text-right inline-block">Website's proudly handcrafted by <a href="https://github.com/0a-">Archy Wilhes</a>.<br><a href="https://github.com/0a-/hackidemia-singapore">View the source code on Github</a>. 
+	<div class="text-right inline-block"><p>SG.hacKIDemia.com is proudly<br>handcrafted by <a href="https://github.com/0a-">Archy</a> with love.</p><a href="https://github.com/0a-/hackidemia-singapore">View the source code on Github</a>. 
 	</div>
 	</div>
 	</div>
