--- a/public/styled/style.less
+++ b/public/styled/style.less
@@ -170,8 +170,10 @@ He's been doing it since the age of 13.
 div,h1,h2,h3,h4{
 	position: relative;
 }
+html,body{
+	overflow: hidden;
+}
 body {
-  overflow: hidden;
   font: 14px Times;
 }
 a{
@@ -346,6 +348,13 @@ h1{
 			line-height: 28px;
 			a{
 				color:#777
+			}
+			a:hover{
+				color:#555
+			}
+			p{
+				line-height:20px;
+				margin-bottom:5px
 			}
 		}
 	}
