added more people & changed port

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -138,6 +138,22 @@
 			<div class="dividerL"></div><div class="dividerR"></div>
 		</div>
 		</div>
+		<div class="person">
+		<div class="imgWrap">
+		<img src="imaginary/roland.jpg">
+		</div>
+		<div class="info">Roland Turner
+			<div class="dividerL"></div><div class="dividerR"></div>
+		</div>
+		</div>
+		<div class="person">
+		<div class="imgWrap">
+		<img src="imaginary/michal.jpg">
+		</div>
+		<div class="info">Michał Gajda
+			<div class="dividerL"></div><div class="dividerR"></div>
+		</div>
+		</div>
 	</div>
 </div>
 <div class="joinTheTeam wordsWordsWords">
