integrated with Keystone.js and added blog section

--- a/public/styled/style.less
+++ b/public/styled/style.less
@@ -251,6 +251,10 @@ h1{
 .margin-right-80{
 	margin-right: 80px
 }
+.constrant{
+	width: 800px;
+	margin: 0 auto
+}
 /* Archy styling himself! Such styling. Much indepedent. Very CSS-philic. Oh Ohohohoh. */
 .backgroundThatMoves{
 	width: 100%;
@@ -298,6 +302,7 @@ h1{
 }
 
 .archyTop{
+	color:#fff;
 	font-family: "Dilem Handwritten";
 	font-size: 24px;
 	position: absolute;
@@ -380,7 +385,7 @@ h1{
 		background-color: @bgc;
 	}
 }
-.redderStyle{
+.archyStyle{
 	@bgc: #e41b00;
 	@bc: #ccc;
 	@wc: #333;
