--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,19 +1,6 @@
-<div class="archyHeader" style="overflow:hidden">
+ <div class="archyHeader" style="overflow:hidden">
 	<div class="background_that_fades">
 	</div>
-
-	<div class="archyTop">
-	<div class="ab-left">
-	<span>Visit HacKIDemia Global</span>
-	</div>
-	<div class="ab-right">
-	<span>workshops/events</span>
-	<span>about</span>
-	<span>blog</span>
-	<span><img src="imaginary/facebook.png"> <img src="imaginary/twitter_bird.png"></span>
-	</div>
-	</div>
-
 	<div class="archyHeadMid">
 	<div class="robotHead">
 	<img class="robotImage tobeScaledUp" src="imaginary/hackidemia.png">
@@ -26,16 +13,14 @@
 	  <div class="rect4"></div>
 	  <div class="rect5"></div>
 	</div>
-	<div class="quoteAtHead tobeSprangOut">
+	<div class="quoteAtHead tobeSprangOut SprangOutAfterLoad">
 	“Tell me and I forget. Teach me and I remember.<br> 
 	Involve me and I learn.”  - Benjamine Franklin
 	</div>
 	</div>
 	</div>
 	</div>
-
 </div>
-
 <div class="archySession redStyle">
 	<div class="archySessionLayer">
 	</div>
@@ -124,7 +109,7 @@
 	<div class="people">
 		<div class="person">
 		<div class="imgWrap">
-		<img src="imaginary/a.jpg">
+		<img src="imaginary/martin.jpg">
 		</div>
 		<div class="info">Martin Ekluen
 			<div class="dividerL"></div><div class="dividerR"></div>
@@ -132,7 +117,7 @@
 		</div>
 		<div class="person">
 		<div class="imgWrap">
-		<img src="imaginary/b.jpg">
+		<img src="imaginary/melvin.jpg">
 		</div>
 		<div class="info">Melvin Zhang Ph.D.
 			<div class="dividerL"></div><div class="dividerR"></div>
@@ -154,6 +139,7 @@
 			<div class="dividerL"></div><div class="dividerR"></div>
 		</div>
 		</div>
+		
 	</div>
 </div>
 <div class="joinTheTeam wordsWordsWords">
@@ -172,18 +158,4 @@ the curent education in SIngapore!<div class="triggerSprangOut single"> </div>
 </h4>
 </a>
 </div>
-</div>
-<div class="archySession redderStyle archyFooter">
-	<div class="archySessionLayer">
-	</div>
-	<div class="archySessionTitle">
-	<div class="archyFooter">
-	<div class="inline-block margin-right-80">
-	<p>Contact us at<br>sg@hackidemia.com</p>
-
-	</div>
-	<div class="text-right inline-block"><p>SG.hacKIDemia.com is proudly<br>handcrafted by <a href="https://github.com/0a-">Archy</a> with love.</p><a href="https://github.com/0a-/hackidemia-singapore">View the source code on Github</a>. 
-	</div>
-	</div>
-	</div>
 </div>
