renamed repo to hackidemia-event-page, shelved blog page

--- a/templates/views/blog.hbs
+++ b/templates/views/blog.hbs
@@ -1,4 +1,4 @@
-<div class="archyBlogHead">
+{{!-- <div class="archyBlogHead">
 </div>
 <div class="archySession blueStyle">
 	<div class="archySessionLayer">
@@ -38,4 +38,4 @@
 	</div>
 	{{/each}}
 	</div>
-</div>
+</div> --}}
