--- a/public/styled/style.less
+++ b/public/styled/style.less
@@ -294,6 +294,7 @@ h1{
 			margin-top: 30px;
 		}
 		.quoteAtHead{
+			text-align: center;
 			font-size: 22px;
 			font-family: Times;
 			padding: 40px 0;
