added init page for server config + admin creation

--- a/templates/views/init.hbs
+++ b/templates/views/init.hbs
@@ -36,14 +36,58 @@
     Why not tell me more about<br> your team before we start?
     </h1>
     <h2>
-    Country: <input >
-    <br>
-    Country Abbreviation:
-    <br>
-    Facebook page:
-    <br>
-    Contact email:
+    <form>
+    <p>Region: <input name="region" placeholder="Venice"></p>
+    <p>Facebook page: <input name="fb" placeholder="https://www.facebook.com/Hackidemia"></p>
+    <p>Would-be Domain: <input name="domain" placeholder="sg">.hacKIDemia.com</p>
+    <p>Contact Email: <input name="email" placeholder="archy">@hacKIDemia.com</p>
     </h2>
+    </form>
     </div>
 </div>
-
+<div class="archySession redStyle">
+    <div class="archySessionLayer">
+    </div>
+    <div class="archySessionTitle tobeScaledUp single">
+    <span> <img src="imaginary/ufo.png"> </span>
+    <span>Creating Admin User</span>
+    </div>
+    <p class="triggerScaledUp single"> </p>
+</div>
+<div class="archySessionWhite wordsWordsWords">
+    <div>
+    <h1>
+    Let's create an admin account <br> that can log into the Admin Panel.
+    </h1>
+    <h2>
+    <form>
+    <p>Name: <input name="admin_name" placeholder="Archy Wilhes"></p>
+    <p>Email: <input name="admin_email" placeholder="a@0a.io"></p>
+    <p>Password: <input name="admin_pass" placeholder="ArchyIsAwesomelyCool"></p>
+    </h2>
+    </form>
+    </div>
+</div>
+<div class="archySession redStyle">
+    <div class="archySessionLayer">
+    </div>
+    <div class="archySessionTitle tobeScaledUp single">
+    <span> <img src="imaginary/ufo.png"> </span>
+    <span>Configuring Clodinary</span>
+    </div>
+    <p class="triggerScaledUp single"> </p>
+</div>
+<div class="archySessionWhite wordsWordsWords">
+    <div>
+    <h1>
+    We use Cloundary to host our images. <br>Sign up a free acount <a target="_blank" href="https://cloudinary.com/users/register/free">here</a>.
+    </h1>
+    <h2>
+    <form>
+        <p>Then <a target="_blank" href="https://cloudinary.com/console">log into</a> your newly registered acc, look for its <u>Environment Variable</u></p>
+        <p>Copy and paste it here: <input name="cloud" placeholder="CLOUDINARY_URL=cloudinary://511237834012377:Y6crjNAKp03Ucxqoewe32QHL81a@user"></p>
+        <p>(This is needed for uploading images on behave of the account)</p>
+    </h2>
+    </form>
+    </div>
+</div>
