--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -23,7 +23,7 @@
 			<div class="ab-right">
 			<span><a class="toWorkshops">workshops/events</a></span>
 			<span><a class="toAbout">about</a></span>
-			<span>{{!-- <a href="/blog">blog</a> --}}</span>
+			{{!-- <span><a href="/blog">blog</a></span> --}}
 			<span><img src="imaginary/facebook.png"> <img src="imaginary/twitter_bird.png"></span>
 			</div>
 		</div>
