added server initialization (that would create an .env file & an admin db seed)

--- a/public/styled/init.less
+++ b/public/styled/init.less
@@ -33,3 +33,13 @@ h2 form p{
 a{
     color:#e32a11
 }
+.submit span{
+    padding:20px;
+    color:#fff;
+    background:#e74c3c;
+    border-radius: 3px;
+    cursor:pointer
+}
+.message{
+   color:#e74c3c
+}
