--- a/templates/views/init.hbs
+++ b/templates/views/init.hbs
@@ -89,5 +89,8 @@
         <p>(This is needed for uploading images on behave of the account)</p>
     </h2>
     </form>
+    <br>
+    <h2 class="submit"><span>Save & Create Config file</span></h2>
+    <h3 class="message"></h3>
     </div>
 </div>
