now onclick button would send GET request with para

--- a/templates/views/init.hbs
+++ b/templates/views/init.hbs
@@ -39,8 +39,8 @@
     <form>
     <p>Region: <input name="region" placeholder="Venice"></p>
     <p>Facebook page: <input name="fb" placeholder="https://www.facebook.com/Hackidemia"></p>
-    <p>Would-be Domain: <input name="domain" placeholder="sg">.hacKIDemia.com</p>
-    <p>Contact Email: <input name="email" placeholder="archy">@hacKIDemia.com</p>
+    <p>Would-be Domain: <input name="subdomain" placeholder="sg">.hacKIDemia.com</p>
+    <p>Contact Email: <input name="contact" placeholder="archy">@hacKIDemia.com</p>
     </h2>
     </form>
     </div>
