--- a/public/styled/style.less
+++ b/public/styled/style.less
@@ -293,6 +293,15 @@ h1{
 			text-align: center;
 			margin-top: 30px;
 		}
+        .robotWordBelow{
+            font-family: "Dilem Handwritten";
+            text-align:right;
+            font-size: 26px;
+            position: relative;
+            right: 15px;
+            width: 370px;
+            margin:0 auto
+        }
 		.quoteAtHead{
 			text-align: center;
 			font-size: 22px;
@@ -581,7 +590,7 @@ h1{
 		}
 		img{
 			opacity: 0.8;
-			width: 100%;
+			height: 100%;
 		}
 		.info{
 			padding:50px 0;
