implemented social links for team members

--- a/public/styled/home.less
+++ b/public/styled/home.less
@@ -13,3 +13,39 @@
         }
     }
 }
+.social{
+    width:100%;
+    overflow:hidden;
+}
+.social,.social_block{
+    height:65px;
+    line-height:65px;   
+}
+.social_block{
+    float: left;
+    text-align: center;
+
+    i{
+        vertical-align: middle;
+        color:#fff;
+        font-size:20px
+    }
+}
+.facebook{
+    background-color:#3b5998
+}
+.website{
+    background-color:#111
+}
+.linkin{
+    background-color:#007bb6
+}
+.github{
+    background-color:#666
+}
+.gplus{
+    background-color:#dd4b39
+}
+.twitter{
+    background-color:#00aced
+}
