--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -128,6 +128,52 @@
         <div class="info">{{name}}
 			<div class="dividerL"></div><div class="dividerR"></div>
 		</div>
+        <div class="social">
+            {{# if website}}
+            <a href="{{website}}">
+            <div class="website social_block">
+                <i class="fa fa-globe "></i>
+            </div>
+            </a>
+            {{/if}}
+            {{# if facebook}}
+            <a href="{{facebook}}">
+            <div class="facebook social_block">
+                <i class=" fa fa-facebook "></i>
+            </div>
+            </a>
+            {{/if}}
+            {{# if twitter}}
+            <a href="{{twitter}}">
+            <div class="twitter social_block">
+                <i class=" fa fa-twitter "></i>
+            </div>
+            </a>
+            {{/if}}
+            {{# if github}}
+            <a href="{{github}}">
+            <div class="github social_block">
+                <i class=" fa fa-github "></i>
+            </div>
+            </a>
+            {{/if}}
+            {{# if linkin}}
+            <a href="{{linkin}}">
+            <div class="linkin social_block">
+                <i class="fa fa-linkedin"></i>
+            </div>
+            </a>
+            {{/if}}
+            {{# if gplus}}
+            <a href="{{gplus}}">
+            <div class="gplus social_block">
+                <i class="fa fa-google-plus"></i>
+            </div>
+            </a>
+            {{/if}}
+
+
+        </div>
 		</div>
         {{/each}}        
 	</div>
