--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -6,7 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>HacKIDemia {{getEnv 'region'}}</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	    <link rel='stylesheet' href='/styled/style.css' />
+	    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <link rel='stylesheet' href='/styled/style.css' />
 	    <link rel='stylesheet' href='/styled/{{this.section}}.css' />
 	    <link href='//fonts.googleapis.com/css?family=Raleway:400' rel='stylesheet' type='text/css'>
 	  	<link href='//fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
@@ -48,6 +49,6 @@
 		<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script src="/js/general.js"></script>
 		<script src="/js/{{this.section}}.js"></script>
-		{{{isAdminEditorJS user}}}
+        {{{isAdminEditorJS user}}}
 	</body>
 </html>
