added doms for .back of event section which now gets data from db

--- a/public/styled/home.less
+++ b/public/styled/home.less
@@ -49,3 +49,20 @@
 .twitter{
     background-color:#00aced
 }
+
+.back{
+    font-family: "Montserrat";
+    color:#fff;
+    h1,h2{
+    display:inline;
+    padding-bottom:0px
+    }
+    h1{
+      padding-right:10px
+    }
+    .absolute-b20{
+        position:absolute;
+        bottom:30px;
+        width:100%
+    }
+}
