--- a/public/styled/style.less
+++ b/public/styled/style.less
@@ -476,7 +476,7 @@ h1{
 			background-color: #FFCD02
 		}
 		.back{
-			background-color: #FFE71C
+			background-color: #f8c12a
 		}
 	}
 	.archyEventWrapper{
@@ -621,7 +621,8 @@ h1{
 	background-color: #ff8838;
 	color:#fff !important;
 	text-align: center;
-	.joinTheTeamButtonBackground{
+}
+	.AwesomeButtonBackground{
 		position: absolute;
 		bottom: 0;
 		left:0;
@@ -629,7 +630,7 @@ h1{
 		background-color: #fff;
 		width: 100%;
 	}
-	h4,.joinTheTeamButtonBackground{
+	h4,.AwesomeButtonBackground{
 		-webkit-transition: all 150ms ease-in;
 		-moz-transition: all 150ms ease-in;
 		-ms-transition: all 150ms ease-in;
@@ -639,10 +640,7 @@ h1{
 	h4:hover{
 		color:darken(#ff8838, 10%);
 	}
-	.joinTheTeamButton{
-		background-color: #fff;
-	}
-}
+
 
 .toScrollPassed{
 	position: fixed;
