--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -65,7 +65,23 @@
 					</div>
 				</div>
 				<div class="back">
-				</div>
+                    <div class="shortDescriptionWrapper">
+					<div class="shortDescription">
+                    <h1>Venue: </h1>
+                    <h2>{{venue}}</h2><br><br>
+                    <h1>Time: </h1>
+                    <h2>{{getTime time}}</h2> 
+                    </div>
+                    </div>
+                    <div class="absolute-b20">
+                        <a href="{{facebook_url}}">
+                       <h4>
+                        <div class="AwesomeButtonBackground"></div>
+                        <div>I'm interested.</div>
+                        </h4>
+                        </a>
+				    </div>
+                    </div>
 				</div>
 			</div>
 		</div>
@@ -184,9 +200,8 @@
 <h2>
 Awesome! We are looking for more mentors & organisers too.
 </h2>
-<a href="/">
-<h4>
-<div class="joinTheTeamButtonBackground"></div>
+<a href="mailto:{{getEnv contact}}.hackidemia.com"><h4>
+<div class="AwesomeButtonBackground"></div>
 <div>
 Join us now and let's make a difference in<br>
 the curent education in SIngapore!<div class="triggerSprangOut single"> </div>
