--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -41,7 +41,7 @@
                 <p>Contact us at<br>{{getEnv 'contact'}}@hackidemia.com</p>
 
 			</div>
-            <div class="text-right inline-block"><p>{{getEnv 'subdomain'}}.hacKIDemia.com is <br>handcrafted by <a href="http//:0a.io">Archy</a> with love.</p><a href="https://github.com/0a-/hackidemia-event-site/">View the source code on Github</a>. 
+            <div class="text-right inline-block"><p>{{getEnv 'subdomain'}}.hacKIDemia.com is <br>handcrafted by <a href="http://0a.io">Archy</a> with love.</p><a href="https://github.com/0a-/hackidemia-event-site/">View the source code on Github</a>. 
 			</div>
 			</div>
 			</div>
