added doc scroll fns

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -24,7 +24,7 @@
 	</div>
 	</div>
 </div>
-<div class="archySession redStyle">
+<div class="archySession redStyle workshops"">
 	<div class="archySessionLayer">
 	</div>
 	<div class="archySessionTitle tobeScaledUp single">
@@ -91,7 +91,7 @@
 	</div>
 	</div>
 </div>
-<div class="archySession yellowStyle">
+<div class="archySession yellowStyle aboutHacKIDemia">
 	<div class="archySessionLayer">
 	</div>
 	<div class="archySessionTitle tobeScaledUp single">
