now all content in the home page retrieves data from mongo

--- a/public/styled/style.less
+++ b/public/styled/style.less
@@ -290,6 +290,7 @@ h1{
 		.robotHead{
 			width: 434px;
 			height: 393px;
+            margin: 0 auto;
 			text-align: center;
 			margin-top: 30px;
 		}
