--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -62,6 +62,15 @@
 					</h2>
 					</div>
 					</div>
+                    <div class="interestedButton">
+                        <a href="{{facebook_url}}">
+                       <h4>
+                        <div class="AwesomeButtonBackground"></div>
+                        <div>I'm interested.</div>
+                        </h4>
+                        </a>
+				    </div>
+
 				</div>
 				<div class="back">
                     <div class="shortDescriptionWrapper">
@@ -72,7 +81,7 @@
                     <h2>{{getTime time}}</h2> 
                     </div>
                     </div>
-                    <div class="absolute-b20">
+                    <div class="interestedButton">
                         <a href="{{facebook_url}}">
                        <h4>
                         <div class="AwesomeButtonBackground"></div>
