--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -27,8 +27,8 @@
 			{{!-- <span><a href="/blog">blog</a></span> --}}
 
             <span>
-                <a href=" {{getEnv 'fb'}} ">  <img src="imaginary/facebook.png"></a> 
-                <a href="https://twitter.com/hackidemia"><img src="imaginary/twitter_bird.png"></a>
+                <a href=" {{getEnv 'fb'}} ">  <img  class="navImage"  src="imaginary/facebook.png"></a> 
+                <a href="https://twitter.com/hackidemia"><img  class="navImage"  src="imaginary/twitter_bird.png"></a>
             </span>
 			</div>
 		</div>
