updated readme & corrected a typo that leads to a small bug

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -210,7 +210,7 @@
 <h2>
 	 {{{getSection data.sections "join us words"}}}
 </h2>
-<a href="mailto:{{getEnv contact}}.hackidemia.com"><h4>
+<a href="mailto:{{getEnv 'contact'}}@hackidemia.com"><h4>
 <div class="AwesomeButtonBackground"></div>
 <div>
  {{{getSection data.sections "join us button"}}}
